[package]
name = "tetrizz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
ordered-float = "5.0.0"
rand = "0.9.1"
# rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "movegen_all"
harness = false

[profile.dev]
overflow-checks = false

[profile.release]
codegen-units = 1
lto = "fat"

[profile.lol]
inherits = "release"
codegen-units = 1
lto = "fat"
