[package]
name = "tetrizz"
version = "0.1.0"
edition = "2021"

[dependencies]
im = "15.1.0"
ordered-float = "5.0.0"
rand = "0.9.1"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "movegen_all"
harness = false

[features]
genetic = ["dep:rayon"]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.lol]
inherits = "release"
codegen-units = 1
lto = "fat"
